Authentication works now
nice

--- a/server/appsettings.json
+++ b/server/appsettings.json
@@ -10,5 +10,8 @@
     "Key": "akshfkljasdnjflkasdjhklf",
     "Issuer": "Abdallah",
     "Audience": "???"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=Todo;User Id=sa;Password=P@ssw0rd;"
   }
 }
