--- a/server/appsettings.json
+++ b/server/appsettings.json
@@ -12,6 +12,6 @@
     "Audience": "???"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=Todo;User Id=sa;Password=P@ssw0rd;"
+    "DefaultConnection": "Server=vpn.security-meter.com;Database=Abdallah;User Id=sa;Password=P@ssw0rd;"
   }
 }
